# textbreaker

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
script/: test-local.sh
tests/: conftest.py  test_advanced_features.py  test_basic_wrapping.py  test_comprehensive.py  test_edge_cases.py  test_initialization.py  test_integration.py  test_tokenization.py
tests/docker/: Dockerfile.test
textbreaker/: __init__.py  core.py
